--- a/stoikisme/filosofi.html
+++ b/stoikisme/filosofi.html
@@ -44,16 +44,12 @@
 			<br>
 			<br>
 		Jauh dari kesan filsafat sebagai topik berat dan mengawang-awang, Filosofi Teras justru bersifat praktis dan relevan dengan kehidupan Generasi Milenial dan Gen-Z masa kini.</p>
-	</div>
-	<br><br><br><br><br>
-	<br><br><br><br><br>
-	<br><br><br><br><br>
-	<br><br><br><br><br>
-	<div class="footer">
-		<h3>GAGAH ARIPRABOWO 
+	
+		<div class="footer">
+		<footer>GAGAH ARIPRABOWO 
 			<br>
 		    Ilustrasi oleh LEVINA LESMANA
-		</h3>
+		</footer>
 	</div>
 
 </body>
