--- a/jurnalanda/Jurnalanda.html
+++ b/jurnalanda/Jurnalanda.html
@@ -19,7 +19,7 @@
 				<li><a href="Tekno">TEKNO</a></li>
 				<li><a href="Politik">POLITIK</a></li>
 				<li><a href="Sejarah">SEJARAH</a></li>
-				<li><a class="buat" href="Buat">BUAT</a></li>
+				<li><a id="buat" href="Buat">BUAT</a></li>
 			</ul>
 		</div>
 
