--- a/Website portofolio/index.html
+++ b/Website portofolio/index.html
@@ -41,9 +41,8 @@
     <section class="jumbotron text-center">
       <img src="img/image5.png" class="rounded-circle mx-auto img-thumbnail" alt="foto profile" />
       <h1 class="display-4">Gagah Ariprabowo</h1>
-      <p class="lead">Web Development | Junior Front end Developer</p>
+      <p class="lead">Junior Front end Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,64L48,74.7C96,85,192,107,288,149.3C384,192,480,256,576,277.3C672,299,768,277,864,250.7C960,224,1056,192,1152,154.7C1248,117,1344,75,1392,53.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-      </svg>
     </section>
     <!-- Jumbotron end -->
     <!-- About -->
@@ -53,15 +52,14 @@
           <div class="col text-center pt-4 mb-5">
             <h2>About Me</h2>
           </div>
-
           <div class="row text-center fs-5">
             <div class="col">
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis autem, praesentium quidem incidunt alias at minus cupiditate repellat natus distinctio laudantium vero corrupti, quas aliquid officiis harum quis tempore hic?
+                I'm Gagah Ariprabowo, a dedicated and driven junior front-end developer with a keen eye for detail and a passion for crafting exceptional user interfaces. With a solid foundation in HTML, CSS, and JavaScript, I'm equipped with the skills necessary to bring your digital projects to life.
               </p>
             </div>
             <div class="col">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam corporis minus sit sint quisquam? Commodi modi hic ducimus, possimus ad quod voluptas aperiam a qui.</p>
+              <p>I thrive in team environments and actively contribute to brainstorming sessions, offering innovative ideas and solutions. I am also open to feedback and always eager to learn from senior developers, fostering a growth-oriented mindset.</p>
             </div>
           </div>
         </div>
@@ -84,19 +82,20 @@
         </div>
           <div class="row row-cols-1 row-cols-md-3 mb-5 g-4">
 
-            <a href="" class="text-decoration-none"><div class="col">
+            <a href="music/index.html" target="_blank" class="text-decoration-none"><div class="col shadow bg-body">
               <div class="card h-100">
                 <img src="img/image4 (1).jpg" class="card-img-top" alt="Project1">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card-body" >
+                  <h5 class="card-title">Music Player</h5>
+                  <p class="card-text">It's time to take your music experience to a whole new level. Say goodbye to ordinary and embrace extraordinary with our innovative music player.</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                  <small class="text-body-secondary">Last updated 7 days ago</small>
                 </div>
               </div>
             </div></a>
-            <a href="" class="text-decoration-none"><div class="col">
+
+            <a href="" class="text-decoration-none"><div class="col col shadow bg-body">
               <div class="card h-100">
                 <img src="img/image4 (2).jpg" class="card-img-top" alt="Project2">
                 <div class="card-body">
@@ -104,26 +103,27 @@
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                  <small class="text-body-secondary">Last updated 7 days ago</small>
                 </div>
               </div>
             </div></a>
-            <a href="" class="text-decoration-none"><div class="col">
+
+            <a href="translator/index.html " target="_blank" class="text-decoration-none"><div class="col col shadow bg-body">
               <div class="card h-100">
                 <img src="img/image4 (3).jpg" class="card-img-top" alt="Project3">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h5 class="card-title">Language translator</h5>
+                  <p class="card-text">Powered by advanced machine learning algorithms, our translator ensures accurate and reliable translations for both short phrases and lengthy documents. Rest assured that your messages will be conveyed precisely, capturing the nuances of the target language.</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                  <small class="text-body-secondary">Last updated 7 days ago</small>
                 </div>
               </div>
-            </div></a>
+            </div>
+          </a>
           </div>
-    </section>
- 
-    <!-- Projects end -->
+      </section>
+      <!-- Projects end -->
     <!-- Contact me -->
     <section id="contact" class="pt-4">
       <div class="container" >
@@ -131,31 +131,34 @@
           <div class="col text-center pt-4">
               <h1>Contact Me</h1>
           </div>
+        </div>
           <div class="row justify-content-center">
+
             <div class="col-md-8">
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Username</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Username">
+                <input id="contactme" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Username">
               </div>
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input id="contactme" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea id="contactme" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
               <button type="button" class="btn btn-primary"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-  Submit
-</button>
-
+               style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+              Submit
+              </button>
             </div>
           </div>
         </div>
       </div>
-    </section>     
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,64L48,74.7C96,85,192,107,288,128C384,149,480,171,576,197.3C672,224,768,256,864,234.7C960,213,1056,139,1152,106.7C1248,75,1344,85,1392,90.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section> 
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,64L48,74.7C96,85,192,107,288,128C384,149,480,171,576,197.3C672,224,768,256,864,234.7C960,213,1056,139,1152,106.7C1248,75,1344,85,1392,90.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+    </svg>
     <!-- Contact me end -->
 
     <!-- Footer -->
